Fix: Start using perfect scrollbar

--- a/packages/reports/app/styles/navi-reports/components/report-view.less
+++ b/packages/reports/app/styles/navi-reports/components/report-view.less
@@ -50,7 +50,7 @@
         position: absolute;
         right: 0;
         top: @edit-header-height;
-        overflow: overlay;
+        overflow: visible;
     }
 
     &__visualization-edit-inner {
