--- a/packages/visualizations/app/styles/navi-visualizations/components/series-selector.less
+++ b/packages/visualizations/app/styles/navi-visualizations/components/series-selector.less
@@ -48,6 +48,7 @@
     }
 
     .table-body {
+        position: relative;
         max-height: 250px;
         overflow: auto;
 
